# odds-toolkit

./: ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  USAGE.md
src/odds_toolkit/: __init__.py  __main__.py  cli.py  odds.py
tests/: test_american.py  test_clv.py  test_fair_odds.py  test_odds.py  test_odds_extra.py  test_overround_payout.py  test_prob_to_american.py  test_version.py
